Bug 175032 - Highlight for search match in overflow node is not properly scrolled
Summary: Highlight for search match in overflow node is not properly scrolled
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Frames (show other bugs)
Version: WebKit Nightly Build
Hardware: iPhone / iPad iOS 11
: P2 Normal
Assignee: Tim Horton
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2017-08-01 09:49 PDT by Frédéric Wang (:fredw)
Modified: 2019-06-28 20:49 PDT (History)
7 users (show)

See Also:


Attachments
testcase (813 bytes, text/html)
2017-08-01 09:49 PDT, Frédéric Wang (:fredw)
no flags Details
testcase (1.10 KB, text/html)
2018-03-13 04:56 PDT, Frédéric Wang (:fredw)
no flags Details
Patch (10.15 KB, patch)
2019-06-28 17:14 PDT, Tim Horton
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Frédéric Wang (:fredw) 2017-08-01 09:49:02 PDT
Created attachment 316865 [details]
testcase

Use "Find in page" in that text case to search "text" and highlight the single search match. Then scroll the overflow node: The highlighted text does not moved with the content of the overflow node.

Extracting this from bug 163911, as that seems orthogonal.
Comment 1 Frédéric Wang (:fredw) 2018-03-13 04:56:47 PDT
Created attachment 335689 [details]
testcase

This is an extended testcase, showing that dynamic scrolls of the main frame or of the subframe make the selection disappear (contrary to desktop).

So to summarize:
- User scroll of a the main frame with hightlighted text works.
- User scroll of a subframe with hightlighted text does not update the position of the highlighted text.
- Programmatic scroll of the main frame or a subframe with hightlighted text makes the selection disappear.
Comment 2 Tim Horton 2019-06-28 17:14:01 PDT
Created attachment 373166 [details]
Patch
Comment 3 WebKit Commit Bot 2019-06-28 20:48:24 PDT
Comment on attachment 373166 [details]
Patch

Clearing flags on attachment: 373166

Committed r246948: <https://trac.webkit.org/changeset/246948>
Comment 4 WebKit Commit Bot 2019-06-28 20:48:25 PDT
All reviewed patches have been landed.  Closing bug.
Comment 5 Radar WebKit Bug Importer 2019-06-28 20:49:17 PDT
<rdar://problem/52369021>